# design_pattern

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/PULL_REQUEST_TEMPLATE/: pull-request-template.md
src/behavior/cor/: README.md  main.py
src/behavior/cor/base/: base_handle.py
src/behavior/cor/error/: error_handle.py
src/behavior/cor/models/: request.py
src/behavior/cor/params/: params.py
src/behavior/cor/process/: authenticate_handle.py  authorizate_handle.py  cache_handle.py  validate_handle.py
src/creation/abstract/: README.md  main.py
src/creation/abstract/base/: document.py
src/creation/abstract/error/: error.py
src/creation/abstract/models/: csv.py  txt.py
src/creation/abstract/process/: document_maneger.py
src/creation/builder/: README.md  main.py
src/creation/builder/base/: build.py  pizza.py
src/creation/builder/factory/: build_margherita.py  build_pepperon.py
src/creation/factory/: README.md  main.py
src/creation/factory/base/: graph.py  (+1 more)
src/creation/prototype/: README.md  main.py
src/creation/singleton/: README.md  main.py
src/structure/adapter/: README.md  main.py
src/structure/bridge/: README.md  send.py
src/structure/composite/: README.md  main.py
src/structure/decorator/: README.md  main.py
src/structure/facade/: README.md  client.py
src/structure/flyweight/: README.md  main.py
src/structure/proxy/: README.md  main.py
src/template/: README.md
src/utils/: logger.py  timer.py  trace.py
tests/src/bridge/: test_send_message.py
(+41 files in other folders)
